output-goal-docker.txt
Thu Sep  8 16:22:51 UTC 2022
Linux LinuxMachine 5.10.124-linuxkit #1 SMP Thu Jun 30 08:19:10 UTC 2022 x86_64 x86_64 x86_64 GNU/Linux
uid=1000(cssuwbstudent) gid=1000(cssuwbstudent) groups=1000(cssuwbstudent),10(wheel)
=====================================================
1. Compiles without warnings with -Wall -Wextra flags
=====================================================
=====================================================
2. Runs and produces correct output
=====================================================
test1 complete
test2 complete
test3 complete
test4 complete
*** Executing commands from test-1.txt
Executing: size
0
Executing: max_size
10
Executing: empty
true
Executing: print
[]
Executing: insert Pikachu
Executing: size
1
Executing: empty
false
Executing: print
[Pikachu]
Executing: insert Bulbasaur
Executing: size
2
Executing: front
Bulbasaur
Executing: back
Pikachu
Executing: print
[Bulbasaur, Pikachu]
Executing: erase 0
Executing: front
Pikachu
Executing: back
Pikachu
Executing: print
[Pikachu]
Invalid command: 
*** Executing commands from test-2.txt
Executing: insert Charmander
Executing: insert Pikachu
Executing: insert Bulbasaur
Executing: print
[Bulbasaur, Charmander, Pikachu]
Executing: erase 1
Executing: print
[Bulbasaur, Pikachu]
Invalid command: 
*** Executing commands from test-3.txt
Executing: insert Dummy
Executing: pop_back
Executing: print
[]
Invalid command: garbage_command
Executing: pop_back
Error: Cannot pop_back for empty Pokedex
Executing: front
Error: Cannot access front for empty Pokedex
Dummy
Executing: back
Error: Cannot access back for empty Pokedex
Dummy
Executing: erase 0
Error: Cannot erase element at 0
Executing: erase 3
Error: Cannot erase element at 3
Executing: at 0
Error: Cannot access element at 0
Dummy
Executing: at 5
Error: Cannot access element at 5
Dummy
Executing: insert A0
Executing: insert A1
Executing: insert A2
Executing: insert A3
Executing: insert A4
Executing: insert A5
Executing: insert A6
Executing: insert A7
Executing: insert A8
Executing: insert A9
Executing: insert A10
Error: Cannot add any more elements to Pokedex
Executing: print
[A0, A1, A2, A3, A4, A5, A6, A7, A8, A9]
Invalid command: 
Done.
=====================================================
3. clang-tidy warnings are fixed
=====================================================
10850 warnings and 1 error generated.
Error while processing /home/cssuwbstudent/pisan/bitbucket/pisan342/ass1-pokedex-solution/main.cpp.
21702 warnings and 2 errors generated.
Error while processing /home/cssuwbstudent/pisan/bitbucket/pisan342/ass1-pokedex-solution/pokedex-commands.cpp.
31628 warnings and 3 errors generated.
Error while processing /home/cssuwbstudent/pisan/bitbucket/pisan342/ass1-pokedex-solution/pokedex.cpp.
/usr/include/wchar.h:35:10: error: 'stddef.h' file not found [clang-diagnostic-error]
#include <stddef.h>
         ^~~~~~~~~~
Suppressed 31629 warnings (31628 in non-user code, 1 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).
=====================================================
4. clang-format does not find any formatting issues
=====================================================
Running clang-format on ./main.cpp
Running clang-format on ./pokedex-commands.cpp
Running clang-format on ./pokedex.cpp
=====================================================
5. No memory leaks using g++
=====================================================
=====================================================
6. No memory leaks using valgrind, look for "definitely lost" 
=====================================================
==11355== Memcheck, a memory error detector
==11355== Copyright (C) 2002-2017, and GNU GPL'd, by Julian Seward et al.
==11355== Using Valgrind-3.18.1 and LibVEX; rerun with -h for copyright info
==11355== Command: ./a.out test-1.txt test-2.txt test-3.txt
==11355== Parent PID: 11165
==11355== 
==11355== 
==11355== HEAP SUMMARY:
==11355==     in use at exit: 0 bytes in 0 blocks
==11355==   total heap usage: 13 allocs, 13 frees, 103,961 bytes allocated
==11355== 
==11355== All heap blocks were freed -- no leaks are possible
==11355== 
==11355== For lists of detected and suppressed errors, rerun with: -s
==11355== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)
=====================================================
7. Tests have full code coverage
=====================================================
File '/home/cssuwbstudent/pisan/bitbucket/pisan342/ass1-pokedex-solution/main.cpp':
Name                        Regions    Miss   Cover     Lines    Miss   Cover  Branches    Miss   Cover
-------------------------------------------------------------------------------------------------------
test1()                           1       0 100.00%         9       3  66.67%         0       0   0.00%
test2()                           1       0 100.00%        13       5  61.54%         0       0   0.00%
test3()                           1       0 100.00%        18       6  66.67%         0       0   0.00%
test4()                           1       0 100.00%        14       2  85.71%         0       0   0.00%
main                              6       0 100.00%        14       0 100.00%         4       1  75.00%
-------------------------------------------------------------------------------------------------------
TOTAL                            10       0 100.00%        68      16  76.47%         4       1  75.00%

File '/home/cssuwbstudent/pisan/bitbucket/pisan342/ass1-pokedex-solution/pokedex-commands.cpp':
Name                                                                                                       Regions    Miss   Cover     Lines    Miss   Cover  Branches    Miss   Cover
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
execute_commands(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&)        39       0 100.00%        53       0 100.00%        26       0 100.00%
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
TOTAL                                                                                                           39       0 100.00%        53       0 100.00%        26       0 100.00%

File '/home/cssuwbstudent/pisan/bitbucket/pisan342/ass1-pokedex-solution/pokedex.cpp':
Name                                                                                                       Regions    Miss   Cover     Lines    Miss   Cover  Branches    Miss   Cover
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
operator<<(std::ostream&, Pokedex const&)                                                                        6       0 100.00%        11       0 100.00%         4       0 100.00%
Pokedex::Pokedex()                                                                                               1       0 100.00%         1       0 100.00%         0       0   0.00%
Pokedex::size() const                                                                                            1       0 100.00%         1       0 100.00%         0       0   0.00%
Pokedex::max_size()                                                                                              1       0 100.00%         1       0 100.00%         0       0   0.00%
Pokedex::empty() const                                                                                           1       0 100.00%         1       0 100.00%         0       0   0.00%
Pokedex::at[abi:cxx11](int) const                                                                                6       0 100.00%         7       0 100.00%         4       1  75.00%
Pokedex::front[abi:cxx11]() const                                                                                4       0 100.00%         7       0 100.00%         2       0 100.00%
Pokedex::back[abi:cxx11]() const                                                                                 4       0 100.00%         7       0 100.00%         2       0 100.00%
Pokedex::insert(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&)         10       0 100.00%        15       0 100.00%         6       0 100.00%
Pokedex::pop_back()                                                                                              4       0 100.00%         7       0 100.00%         2       0 100.00%
Pokedex::erase(int)                                                                                              9       0 100.00%        10       0 100.00%         6       1  83.33%
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
TOTAL                                                                                                           47       0 100.00%        68       0 100.00%        26       2  92.31%
...
[deleted]
...
Thu Sep  8 16:23:01 UTC 2022
=====================================================
To create an output.txt file with all the output from this script
Run the below command
      ./create-output.sh > output.txt 2>&1 
=====================================================
